--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -37,6 +37,9 @@
     margin-right: 2rem;
     background-color: #2a2e35;
 }
+.nav-menu li {
+    background-color: #2a2e35;
+}
 .nav-links {
     color: aliceblue;
     text-decoration: none;
@@ -46,7 +49,7 @@
 .nav-links:hover {
     background-color: #76dc87;
     border-radius: 4px;
-    transition: all 0.2s ease-out;
+    transition: all 0.4s ease-out;
     color: #2a2e35;
 }
 .nav-links-sign {
@@ -55,4 +58,85 @@
 .fa-bars {
     color: aliceblue;
     display: none;
+}
+
+@media screen and (max-width: 1100px) {
+    .navbar-items {
+        position: relative;
+        min-width: 280px;
+    }
+    .nav-links{
+        background-color: #363c45;
+        text-align: center;
+        padding: 2rem;
+        width: 100%;
+        display: table;
+    }
+    .nav-links:hover{
+        border-radius: 0;
+    }
+    .nav-menu {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 400px;
+        position: absolute;
+        top: 80px;
+        background-color: #363c45;
+        opacity: 1;
+        left: -100%;
+        transition: all 0.5s ease;
+    }
+    .nav-menu li {
+        background-color: #363c45;
+
+    }
+    .nav-menu.active {
+        left: 0;
+        opacity: 1;
+        transition: all 0.5s ease;
+    }
+    .navbar-logo {
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: translate(20%, 0);
+    }
+    .navbar-title {
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: translate(58%, 110%);
+    }
+    .menu-icon i {
+        display: block;
+        position: absolute;
+        color: #fa8284;
+        background-color: #2a2e35;
+        top: 0;
+        right: 0;
+        transform: translate(-100%, 90%);
+        font-size: 1.6rem;
+        cursor: pointer;
+    }
+    .nav-links-sign {
+        display: block;
+        text-align: center;
+        padding: 1.5rem;
+        margin: 2rem auto;
+        border-radius: 4px;
+        width: 80%;
+        background-color: #76dc87;
+        text-decoration: none;
+        color: #2a2e35;
+        font-size: 1.4rem;
+    }
+    .nav-links-sign:hover {
+        background-color: #363c45;
+        color: #76dc87;
+        transition: all 250ms ease;
+    }
+    Button {
+        display: none;
+    }
 }
