--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -44,11 +44,28 @@ body {
     margin-left: -100px;
 }
 
-.card-header h2:hover {
+.card:first-child{
+    background: linear-gradient(45deg, rgba(250,130,132,1) 0%, rgba(255,94,154,1) 96%, rgba(255,73,105,1) 99%);
+    justify-content: center;
+}
+
+.card:first-child .card-techstack {
+    display: none;
+}
+
+.card:not(:first-child) h2:hover {
     background: linear-gradient(90deg, rgba(250,130,132,1) 0%, rgba(255,94,154,1) 53%, rgba(255,73,105,1) 100%);
     text-shadow: none;
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     transition: all 2s;
+}
+.card-image{
+    height: 100px;
+    margin: 1rem;
+}
+.card-image img {
+    max-width: 100%;
+    max-height: 100%;
 }
