--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -25,7 +25,7 @@ body {
     display: flex;
     position: relative;
     flex-direction: column;
-    height: 350px;
+    height: 370px;
     width: 400px;
     min-width: 250px;
     padding: 1.5rem;
@@ -65,12 +65,12 @@ body {
 }
 .card-image{
     height: 100px;
-    margin: 1rem;
-    padding: 1rem;
+    justify-content: center;
 }
 .card-image img {
     max-width: 100%;
     max-height: 100%;
+    padding-top: 18px;
 }
 .card-description {
     height: 65px;
@@ -79,7 +79,9 @@ body {
 .card-techstack {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     gap: 4px;
+    height: 70px;
 }
 .card-tech {
     list-style: none;
@@ -91,4 +93,7 @@ body {
 .video {
     background-color: #76dc87;
     color: #12181b;
+}
+.card-header {
+    height: 64px;
 }
