--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -9,6 +9,9 @@
     cursor: pointer;   
     border: none;
     white-space: nowrap;
+    width: 135px;
+    box-sizing: border-box;
+
 }
 
 .btn:hover {
@@ -18,6 +21,8 @@
     color: var(--primary);
     border-radius: 4px;
     outline: none;
+    width: 135px;
+    box-sizing: border-box;
 }
 .btn--primary {
     background-color: var(--primary);
