--- a/src/components/Join/Join.css
+++ b/src/components/Join/Join.css
@@ -2,6 +2,8 @@
     display: flex;
     justify-content: center;
     margin: 2.5rem 1.5rem auto 1.5rem;
+    flex-direction: column;
+    align-items: center;
 }
 .join-card {
     background-color: #1c1f22;
@@ -33,4 +35,35 @@
     text-align: center;
     align-self: center;
     padding: 4px;
+}
+
+.join-email {
+    margin: 2.5rem;
+    padding: 1rem 1.5rem;
+    max-width: 400px;
+    background-color: #1c1f22;
+    display: flex;
+    min-height: 130px;
+    width: 100%;
+    max-width: 500px;
+    min-width: 300px;
+    position: relative;
+    border-radius: 16px;
+    justify-content: center;
+    box-shadow: 0.5rem 0 1rem #000;
+    flex-direction: column;   
+}
+.join-email-title{
+    padding: 0rem 1rem 1rem;
+}
+
+.join-input {
+    background-color: #333;
+    border-radius: 8px;
+    height: 40px;
+    border-style: hidden;
+    color: aliceblue;
+    font-size: 20px;
+    padding: 5px 10px;
+    text-align: center;
 }
