--- a/src/components/Join/Join.css
+++ b/src/components/Join/Join.css
@@ -39,8 +39,7 @@
 
 .join-email {
     margin: 2.5rem;
-    padding: 1rem 1.5rem;
-    max-width: 400px;
+    padding: 1.5rem 1.5rem;
     background-color: #1c1f22;
     display: flex;
     min-height: 130px;
@@ -51,7 +50,7 @@
     border-radius: 16px;
     justify-content: center;
     box-shadow: 0.5rem 0 1rem #000;
-    flex-direction: column;   
+    flex-direction: column;  
 }
 .join-email-title{
     padding: 0rem 1rem 1rem;
@@ -66,4 +65,17 @@
     font-size: 20px;
     padding: 5px 10px;
     text-align: center;
+}
+
+.join-submit {
+    margin-top: 1rem;
+    height: 40px;
+    width: 100px;
+    border-radius: 8px;
+    background-color: #fa8284;
+    border: none;
+    color: aliceblue;
+    align-self: flex-end;
+    cursor: pointer;
+    font-size: 16px;
 }
